syntax = "proto3";

package mypackage;

// Service LoadBalancerService pour la gestion de l'allocation des VMs
service LoadBalancerService {
    rpc UpdatePCResourcesStatus (PCResources) returns (StatusResponse);
    rpc AddPC (PCResources) returns (StatusResponse);
    rpc RemovePC (PCResources) returns (StatusResponse);
    rpc AllocateVMToPC (VMAllocationRequest) returns (VMAllocationResponse);
}

// Message pour les informations des PCs
message PCResources {
    string pc_id = 1;
    float cpu_usage = 2;
    float ram_usage = 3;
    string status = 4; // active, inactive, etc.
}

message StatusResponse {
    string message = 1;
    bool success = 2;
}

// Message pour allouer une VM sur un PC sp√©cifique
message VMAllocationRequest {
    string vm_id = 1;
    string template_id = 2;
}

message VMAllocationResponse {
    string pc_id = 1;
    string message = 2;
}
